# FilterEmbeddedLibrary

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Filter.h  Filter_utils.h  LICENSE  README.md  main.cpp
examples/: example1_Moving_average.cpp  example2_Exponentially_weighted_moving_average.cpp
include/: Filter.h  Filter.hpp  Filter_utils.hpp
tests/: Filter_testing.cc  Filter_testing.cpp
